--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,10 +2,13 @@
 <html lang="{{ app.request.locale }}">
     <head>
         <meta charset="UTF-8" />
+        <link rel="stylesheet" href="css/style.css">
         <title>BANK INFO</title>
     </head>
     <body>
-        <h1>Bank Info</h1>
-        <h2>{{ controller_name }}</h2>
+        <section>
+            <h1>Bank RF - Info</h1>
+            <h2>{{ controller_name }}</h2>
+        </section>
     </body>
 </html>
